
    * Add the CloudI Service API function code_status to
      provide build and runtime information
      (including service files that have changed since startup)
    * Fix CloudI Service API tests to rely on
      cloudi_service_api_requests providing JSON-RPC with
      JSON data instead of Erlang terms
    * Update jsonrpclib (now Python 3 is supported)

2018-06-19 Michael Truog   <mjtruog at protonmail dot com>

    * Final changes to Erlang/OTP 21.0 logger configuration
    * Fix problem with cloudi_service_map_reduce use with the
      service configuration option duo_mode == true

2018-06-18 Michael Truog   <mjtruog at protonmail dot com>

    * Improve critical CloudI service startup messages and comments

2018-06-17 Michael Truog   <mjtruog at protonmail dot com>

    * Change CloudI Service API services_status time duration
      strings to omit large 0 durations and to use singular units

2018-06-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add more comments to cloudi_service_queue
    * Change CloudI Service API services_status time duration
      strings to provide days

2018-06-11 Michael Truog   <mjtruog at protonmail dot com>

    * Add the Erlang implementation of the binary_pairs format
      (for RequestInfo/ResponseInfo key/value data)

2018-06-09 Michael Truog   <mjtruog at protonmail dot com>

    * Remove ZeroMQ support from this repository
      (it continues to exist at
       https://github.com/CloudI/cloudi_service_zeromq)
        * If cloudi_service_zeromq was being used for CloudI
          node connections, it is best to switch to using the SSH
          connectivity in cloudi_service_router

2018-06-06 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the accuracy of the time used for the start/end of a
      restart for the data used by the CloudI Service API
      function services_status
        * Now the CloudI Service API services_status function tracks