@@ -966,6 +966,8 @@
 ----------------------------------------------------------------- Apache License
 (Python) service_api/python/jsonrpclib/
 
+ Copyright 2017 Thomas Calmant
+
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
@@ -992,7 +994,7 @@
 (as referenced by (Erlang) lib/quickrand/src/random_wh06_int.erl)
 (as referenced by (Erlang) lib/quickrand/src/random_wh82.erl)
 (as referenced by (Java) api/java/com/ericsson/otp/erlang/)
-(as referenced by (Python) external/jsonrpclib)
+(as referenced by (Python) service_api/python/jsonrpclib)
 
  Apache License
  
