@@ -207,6 +207,11 @@ cloudi_service_handle_info(#init_end{state = State,
             {stop, Error, State}
     end;
 
+cloudi_service_handle_info(Request, undefined, Dispatcher) ->
+    % waiting for #init_end{} still
+    cloudi_service:self(Dispatcher) ! Request,
+    {noreply, undefined};
+
 cloudi_service_handle_info(#timeout_async_active{trans_id = TransId} = Request,
                            #state{map_reduce_module = MapReduceModule,
                                   map_reduce_state = MapReduceState,
